Embed portfolio site and style
Embedded portfolio site into article

Future projects must receive their own article and id referenced to

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -74,33 +74,22 @@
 						<article id="work">
 							<h2 class="major">Work</h2>
 							<div class="workContainer">
-								<div>
-									<img src="./images/pic01.jpg">
-									<p>Some work here I guess<p>
-								</div>
-								<div>
-									<img src="./images/pic01.jpg">
-									<p>Some work here I guess<p>
-								</div>
-								<div>
-									<img src="./images/pic01.jpg">
-									<p>Some work here I guess<p>
-								</div>
-								<div>
-									<img src="./images/pic01.jpg">
-									<p>Some work here I guess<p>
-								</div>
-								<div>
-									<img src="./images/pic01.jpg">
-									<p>Some work here I guess<p>
-								</div>
-								<div>
-									<img src="./images/pic01.jpg">
-									<p>Some work here I guess<p>
-								</div>
+								<div><a href="#estheticianSite">
+									<img src="./images/SimmsEstheticsWork.png">
+									<p>Esthetician site for a local business</p>
+								</a></div>
 							</div>
-						
 						</article>
+						
+
+						<!-- Project embeds -->
+						<article id="estheticianSite" class="PortfolioSiteEmbed">
+							<embed src="https://simmsesthetics.netlify.app/">
+							<div class="portfolioNewTab">
+								<a href="https://simmsesthetics.netlify.app/" target="_blank">Open in new tab</a>
+							<div>
+						</article>
+
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
