Added KevinsCoffee site with embed functionality and images

--- a/index.html
+++ b/index.html
@@ -76,7 +76,12 @@
 							<div class="workContainer">
 								<div><a href="#estheticianSite">
 									<img src="./images/SimmsEstheticsWork.png">
-									<p>Esthetician site for a local business</p>
+									<p>Responsive esthetician site for a local business</p>
+								</a></div>
+
+								<div><a href="#kevinsCoffee">
+									<img src="./images/KevinsCoffee.png">
+									<p>Responsive site for local coffee shop using HTML CSS and JS</p>
 								</a></div>
 							</div>
 						</article>
@@ -87,6 +92,13 @@
 							<embed src="https://simmsesthetics.netlify.app/">
 							<div class="portfolioNewTab">
 								<a href="https://simmsesthetics.netlify.app/" target="_blank">Open in new tab</a>
+							<div>
+						</article>
+
+						<article id="kevinsCoffee" class="PortfolioSiteEmbed">
+							<embed src="https://kevinscoffee.netlify.app/">
+							<div class="portfolioNewTab">
+								<a href="https://kevinscoffee.netlify.app/" target="_blank">Open in new tab</a>
 							<div>
 						</article>
 
