--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 								<p>Your next software engineer</p>
 								<p>Enjoy my latest projects, a little about me, and let's build something great together</p>
 							</div>
+							
 						</div>
 						<nav>
 							<ul>
@@ -394,6 +395,22 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
+			<script src="https://cdn.jsdelivr.net/npm/vanta/dist/vanta.net.min.js"></script>
+			<script>
+  				VANTA.NET({
+					el: "#bg",
+					mouseControls: true,
+					touchControls: true,
+					gyroControls: false,
+					minHeight: 200.0,
+					minWidth: 200.0,
+					scale: 1.0,
+					scaleMobile: 1.0,
+					spacing: 20,
+					color: 0x7accfe,
+					backgroundColor: 0x010f18
+				});
+			</script>
 	</body>
 </html>
