Added smooth scrolling recent projects button
Removed files related to a jquery smooths scroll solution

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 									<h1>Anthony Saez</h1>
 									<p>Your next software engineer</p>
 									<p>Enjoy my latest projects, a little about me, and let's build something great together</p>
+									<button><a href="#footer">Recent Projects</a></button>
 								</div>
 								
 							</div>
@@ -407,8 +408,11 @@
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="assets/js/scrollAnimations"></script>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
 			<script src="https://cdn.jsdelivr.net/npm/vanta/dist/vanta.net.min.js"></script>
 			<script>
