--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 									<h1>Anthony Saez</h1>
 									<p>Your next software engineer</p>
 									<p>Enjoy my latest projects, a little about me, and let's build something great together</p>
-									<button><a href="#footer">Recent Projects</a></button>
+									<a href="#recentProjects"><button>Recent Projects</button></a>
 								</div>
 								
 							</div>
@@ -50,7 +50,7 @@
 							<!-- Intro -->
 								<article id="intro">
 									<h2 class="major">About Me</h2>
-									<span class="image main"><img src="./images/PortfolioPicture.jpg" alt="Anthony Saez" /></span>
+									<span class="image main"><img src="./images/PortfolioPicture (2).jpg" alt="Anthony Saez" /></span>
 									<p>I am a software engineer from Orlando, FL<p>
 									<p>Uncovering optomized and efficient solutions for productivity has always been a passion of mine.
 										In my free time I can be seen spending time at the dog park or with my cat, playing in virtual reality, watching Star Wars, or playing board games with family & friends.
