Added echoVr Project and made work tabs flex to avoid overflow on top of page

--- a/index.html
+++ b/index.html
@@ -96,6 +96,11 @@
 										<img src="./images/KevinsCoffee.png">
 										<p>Responsive site for local coffee shop using HTML CSS and JS</p>
 									</a></div>
+
+									<div><a href="#saveEchoVr">
+										<img src="./images/SaveEchoVr.jpeg">
+										<p>#FightForEcho website to save VR game being discontinued by Meta</p>
+									</a></div>
 								</div>
 								<div class="buttonHolder">
 									<a href="#intro">About</a>
@@ -117,6 +122,13 @@
 								<embed src="https://kevinscoffee.netlify.app/">
 								<div class="portfolioNewTab">
 									<a href="https://kevinscoffee.netlify.app/" target="_blank">Open in new tab</a>
+								<div>
+							</article>
+
+							<article id="saveEchoVr" class="PortfolioSiteEmbed">
+								<embed src="https://fightforecho.netlify.app/index.html">
+								<div class="portfolioNewTab">
+									<a href="https://fightforecho.netlify.app/index.html" target="_blank">Open in new tab</a>
 								<div>
 							</article>
 
@@ -407,7 +419,7 @@
 				<section id= "recentProjects">
 					<h2>Recent Projects</h2>
 					<div class="projectImages">
-						<a href="https://simmsesthetics.netlify.app/"><img src="./images/SimmsEstheticsWork.png"></a>
+						<a href="https://fightforecho.netlify.app/index.html"><img src="./images/SaveEchoVr.jpeg"></a>
 						<a href="https://kevinscoffee.netlify.app/"> <img src="./images/KevinsCoffee.png">		
 					</div> 
 				</section>
