wording change for echo site

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
 									<div><a href="#saveEchoVr">
 										<img src="./images/SaveEchoVr.jpeg">
-										<p>#FightForEcho website to save VR game being discontinued by Meta</p>
+										<p>#FightForEcho website to raise awareness for a VR game being discontinued</p>
 									</a></div>
 								</div>
 								<div class="buttonHolder">
